<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="registration_header">Registration</string>
    <string name="name_header">Name:</string>
    <string name="mobile_header">Mobile Number:</string>
    <string name="table_header">Table:</string>
    <string name="smokingArea">Smoking</string>
    <string name="nonSmokingArea">Non-Smoking</string>
    <string name="confirmButton">CONFIRM</string>
    <string name="clearButton">CLEAR</string>
    <string name="group_header">Group Size:</string>
</resources>